Filter get all pnf by owning entity if multi tenancy is enabled
Issue-ID: AAI-3214
Signed-off-by: Rodrigo Lima <rodrigo.lima@yoppworks.com>
Change-Id: I97e62e12f06938294d9969d21b4dcacae9d01d78